// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drill url placeholders should extracted placeholders 1`] = `
Array [
  Object {
    "identifier": "campaign_channels.category",
    "placeholder": "{attribute_title(campaign_channels.category)}",
    "ref": Object {
      "identifier": "campaign_channels.category",
      "type": "displayForm",
    },
    "toBeEncoded": true,
  },
  Object {
    "identifier": "6c2664ac21764748910953139a3aedad:campaign_channels.category",
    "placeholder": "{attribute_title(6c2664ac21764748910953139a3aedad:campaign_channels.category)}",
    "ref": Object {
      "identifier": "6c2664ac21764748910953139a3aedad:campaign_channels.category",
      "type": "displayForm",
    },
    "toBeEncoded": true,
  },
]
`;

exports[`drill url placeholders should split and join parts 1`] = `
Array [
  "https://google.com/?q=",
  Object {
    "identifier": "campaign_channels.category",
    "type": "displayForm",
  },
  "&b=",
  Object {
    "identifier": "6c2664ac21764748910953139a3aedad:campaign_channels.category",
    "type": "displayForm",
  },
  "",
]
`;
